--- a/views/posts-new.handlebars
+++ b/views/posts-new.handlebars
@@ -1,8 +1,12 @@
-<form>
-  <div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-4">
     <form action="/posts/new" method="post">
       <legend>New Post</legend>
+      <div class="form-group">
+        <label for="post-subreddit">Subreddit</label>
+        <input name="subreddit" type="text" class="form-control" id="post-subreddit" placeholder="Subreddit">
+      </div>
       <div class="form-group">
         <label for="post-title">Title</label>
         <input type="text" name="title" class="form-control" id="post-title" placeholder="Title">
@@ -20,5 +24,4 @@
       </div>
     </form>
   </div>
-  </div>
-</form>
+</div>
