--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,6 @@
     <title>Reddit.js</title>
   </head>
   <body>
-
     {{!-- navbar  --}}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Reddit</a>
@@ -45,7 +44,9 @@
       </div>
     </nav>
 
-    {{{body}}}
+    <div class="container">
+      {{{body}}}
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
